@@ -42,7 +42,8 @@ public class CommandParser {
     }
 
     private void executeProcess(String executable, List<String> argumentsRaw) {
-        String[] arguments = argumentsRaw.get(0).split("(?<=')\\s+(?=')");
+        String[] arguments = argumentsRaw.getFirst().split("(?<=')\\s+(?=')");
+        System.out.println(Arrays.toString(arguments));
 
         try {
             Path workingDirectory = Path.of(System.getProperty("~")).toAbsolutePath().normalize();
